--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "browser-sync": "^2.24.5",
     "del": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0",
     "gulp": "^4.0.0-build.a271520",
     "gulp-4.0.build": "^4.0.0-build.a271520",
     "gulp-autoprefixer": "^5.0.0",
