--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^4.0.0-build.a271520",
     "gulp-4.0.build": "^4.0.0-build.a271520",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-debug": "^4.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.1"
